Attempt to fix border colour on iPhone

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,8 @@ input:focus, input:hover {
 
 input:valid {
     color: $dark_cyan;
+    outline: none;
+    border: none;
 }
 
 #logo {
